--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,15 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div>
   <h1>
     Recipe Box
   </h1>
   <h2>{{currentFocus}}</h2>
+  <h2>{{userName}}</h2>
+  <form>
+    <input [(ngModel)]="userName" type="text" name="user">
+  </form>
   <div *ngFor='let currentRecipe of recipes'>
-  <h3>{{currentRecipe.title}}</h3>
+  <h3 [class]="difficultyColor(currentRecipe)">{{currentRecipe.title}}</h3>
   <ul>
     <li *ngFor='let ingredient of currentRecipe.ingredients'>{{ingredient}}</li>
   </ul>
@@ -13,4 +17,14 @@
     <li>{{currentRecipe.directions}}</li>
   </ul>
   <br>
+  <button (click)="editRecipe(currentRecipe)">Edit!</button>
 </div>
+
+<h3>{{selectedRecipe.title}}</h3>
+<h3>Edit Title of Recipe</h3>
+<label>Enter Recipe Title:</label>
+<input [(ngModel)]='selectedRecipe.title'><br>
+<label>Enter recipe difficulty (1 or 2):</label>
+<br>
+<input type="radio" [(ngModel)]="selectedRecipe.difficulty" [value]="1">1 (Low Difficulty)<br>
+<input type="radio" [(ngModel)]="selectedRecipe.difficulty" [value]="2">2 (Moderate Difficulty)
