Toggle display on recipe ingredients and directions.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,20 +4,19 @@
     Recipe Box
   </h1>
   <h2>{{currentFocus}}</h2>
-  <h2>{{userName}}</h2>
-  <form>
-    <input [(ngModel)]="userName" type="text" name="user">
-  </form>
+
   <div *ngFor='let currentRecipe of recipes'>
-  <h3 [class]="difficultyColor(currentRecipe)">{{currentRecipe.title}}</h3>
-  <ul>
-    <li *ngFor='let ingredient of currentRecipe.ingredients'>{{ingredient}}</li>
-  </ul>
-  <ul>
-    <li>{{currentRecipe.directions}}</li>
-  </ul>
-  <br>
-  <button (click)="editRecipe(currentRecipe)">Edit!</button>
+  <h3 (click)="viewRecipe(currentRecipe)" [class]="difficultyColor(currentRecipe)">{{currentRecipe.title}}</h3>
+  <div *ngIf="selectedTitle === currentRecipe">
+    <ul>
+      <li *ngFor='let ingredient of currentRecipe.ingredients'>{{ingredient}}</li>
+    </ul>
+    <ul>
+      <li>{{currentRecipe.directions}}</li>
+    </ul>
+    <br>
+    <button (click)="editRecipe(currentRecipe)">Edit!</button>
+  </div>
 </div>
 <div *ngIf="selectedRecipe">
   <h3>{{selectedRecipe.title}}</h3>
