--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,5 @@
   </h1>
   <h2>{{currentFocus}}</h2>
 
+  <app-new-recipe (sendRecipe)="addRecipe($event)"></app-new-recipe>
   <app-recipe-list [childRecipeList]="masterRecipeList" (clickSender)="editRecipe($event)"><app-recipe-list>
-
-  
